# neppit

./: .gitignore  .travis.yml  Cargo.toml  Justfile  README.md  config.toml  drop_tables.sh  neppit.toml
migrations/20161124084719_create_boards/: down.sql  up.sql
migrations/20161126201652_create_posts/: up.sql
sass/: style.sass
src/: board.rs  database.rs  errors.rs  main.rs  moderator.rs  post.rs  routes.rs  thread.rs
src/database/: get.rs  mod.rs
src/db/: create.rs  delete.rs  mod.rs  read.rs  update.rs
src/routes/: mod.rs  types.rs
templates/: 404.hbs  board.hbs  home.hbs  install.hbs  thread.hbs
