[package]
authors = ["nokaa <nokaa@cock.li>"]
name = "neppit"
version = "0.1.0"

[dependencies]
dotenv = "0.8.0"
env_logger = "0.3.5"
error-chain = "0.7.1"
lazy_static = "0.2.2"
log = "0.3.6"
postgres = "0.13.3"
r2d2 = "0.7.1"
r2d2_postgres = "0.11.1"
serde = "0.8.16"
serde_derive = "0.8"
serde_json = "0.8.3"

[dependencies.handlebars]
default-features = false
features = ["serde_type"]
version = "0.21.1"

[dependencies.hayaku]
git = "https://github.com/hayaku-rs/hayaku.git"

[dependencies.toml]
default-features = false
features = ["serde"]
version = "0.2.1"
