[package]
authors = ["nokaa <nokaa@cock.li>"]
name = "neppit-rocket"
version = "0.1.0"

[dependencies]
dotenv = "0.8.0"
env_logger = "0.4.0"
log = "0.3.6"
r2d2 = "0.7.1"
r2d2_postgres = "0.11.1"
rocket = "0.2.0"
rocket_codegen = "0.2.0"
serde = "0.9.7"
serde_derive = "0.9.7"
serde_json = "0.9.6"
toml = "0.3.0"

[dependencies.chrono]
features = ["serde"]
version = "0.3.0"

[dependencies.postgres]
features = ["with-chrono"]
version = "0.13.6"

[dependencies.rocket_contrib]
default-features = false
features = ["handlebars_templates"]
version = "0.2.0"
